--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
   "devDependencies": {
     "babel-core": "^5.8.23",
     "babel-loader": "^5.3.2",
-    "react-hot-loader": "^1.3.0",
     "chai": "^3.2.0",
+    "chai-immutable": "^1.3.0",
     "jsdom": "^3.1.2",
     "mocha": "^2.3.0",
+    "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.0",
     "webpack-dev-server": "^1.10.1"
   },
   "dependencies": {
     "immutable": "^3.7.5",
     "react": "^0.13.3",
-    "react-router": "^0.13.3"
+    "react-router": "^0.13.3",
+    "redux": "^2.0.0"
   }
 }
