--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "object-assign": "^4.0.1",
     "react": "^0.14.0",
     "react-addons-pure-render-mixin": "^0.14.0",
+    "react-dom": "^0.14.0",
     "react-redux": "^3.1.0",
     "react-router": "^1.0.0-rc3",
     "redux": "^2.0.0",
