--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer-loader": "^2.1.0",
-    "babel-core": "^5.8.23",
-    "babel-loader": "^5.3.2",
+    "babel-core": "^6.1.2",
+    "babel-loader": "^6.0.1",
+    "babel-preset-es2015": "^6.1.2",
+    "babel-preset-react": "^6.1.2",
     "chai": "^3.2.0",
     "chai-immutable": "^1.3.0",
     "css-loader": "^0.17.0",
@@ -34,5 +36,8 @@
     "redux": "^2.0.0",
     "socket.io-client": "^1.3.6",
     "uuid": "^2.0.1"
+  },
+  "babel": {
+    "presets": ["es2015", "react"]
   }
 }
