--- a/package.json
+++ b/package.json
@@ -9,35 +9,40 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer-loader": "^2.1.0",
-    "babel-core": "^6.1.2",
-    "babel-loader": "^6.0.1",
-    "babel-preset-es2015": "^6.1.2",
-    "babel-preset-react": "^6.1.2",
-    "chai": "^3.2.0",
-    "chai-immutable": "^1.3.0",
-    "css-loader": "^0.17.0",
-    "jsdom": "^6.5.1",
-    "mocha": "^2.3.0",
+    "postcss-loader": "0.8.1",
+    "babel-core": "6.5.1",
+    "babel-loader": "6.2.2",
+    "babel-preset-es2015": "6.5.0",
+    "babel-preset-react": "6.5.0",
+    "chai": "3.5.0",
+    "chai-immutable": "1.5.3",
+    "css-loader": "0.23.1",
+    "jsdom": "8.0.4",
+    "mocha": "2.4.5",
     "react-hot-loader": "^1.3.0",
-    "style-loader": "^0.12.3",
-    "webpack": "^1.12.0",
-    "webpack-dev-server": "^1.10.1"
+    "style-loader": "0.13.0",
+    "webpack": "1.12.14",
+    "webpack-dev-server": "1.14.1"
   },
   "dependencies": {
-    "classnames": "^2.1.3",
-    "immutable": "^3.7.5",
-    "object-assign": "^4.0.1",
-    "react": "^0.14.0",
-    "react-addons-pure-render-mixin": "^0.14.0",
-    "react-dom": "^0.14.0",
-    "react-redux": "^3.1.0",
-    "react-router": "^1.0.0-rc3",
-    "redux": "^2.0.0",
-    "socket.io-client": "^1.3.6",
-    "uuid": "^2.0.1"
+    "autoprefixer": "6.3.3",
+    "classnames": "2.2.3",
+    "immutable": "3.7.6",
+    "object-assign": "4.0.1",
+    "react": "0.14.7",
+    "react-addons-pure-render-mixin": "0.14.7",
+    "react-addons-test-utils": "0.14.7",
+    "react-dom": "0.14.7",
+    "react-redux": "4.4.0",
+    "react-router": "2.0.0",
+    "redux": "3.3.1",
+    "socket.io-client": "1.4.5",
+    "uuid": "2.0.1"
   },
   "babel": {
-    "presets": ["es2015", "react"]
+    "presets": [
+      "es2015",
+      "react"
+    ]
   }
 }
